# mcp-extendicare-ppt

./: .gitignore  CLAUDE.md  Extendicare_Layout_Reference_Clean_report.txt  README.md  ai_friendly_template_metadata.json  ai_template_builder_guide.md  analyze_template.py  claude_desktop_config.json  claude_integration_server.py  config.json  create_ai_friendly_template_poc.py  generate_layout_reference.py  generate_layout_reference_clean.py  generate_layout_reference_v2.py  generate_layout_reference_visual.py  layout_naming_convention.md  layout_reference_report.txt  layout_reference_summary.json  layout_reference_summary_v2.json  main.py  mcp_server.py  poc_template_metadata.json  pyproject.toml  quickstart_server.py  quickstart_server_v2.py  run_server.py  simple_test_server.py  simple_working_server.py  smart_layout_selector.py  test_ai_friendly_system.py  test_comprehensive.py  test_mcp_direct.py  test_server.py  web_mcp_server.py
